Fix discount calculation

--- a/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsEdit.cshtml
@@ -96,7 +96,7 @@
             <div class="card text-center text-primary" data-translate="At least one product must be added."
                  data-ng-show="controller.noProductsSelected()"></div>
 
-            <form name="controller.rentContractProductsForm">
+            <form name="controller.rentedProductsForm">
                 <div class="card list">
                     <div class="list-item" data-ng-repeat="product in controller.rentContract.productList | orderBy:'name'">
                         <div class="box">
@@ -114,7 +114,7 @@
                             <div class="grid-column medium-6 large-6">
                                 <div class="grid-row">
                                     <div class="grid-column compact small-6 medium-6 large-6">
-                                        <div class="box" data-has-error="controller.rentContractProductsForm.cost.$invalid">
+                                        <div class="box" data-has-error="controller.rentedProductsForm.cost.$invalid">
                                             <label data-translate="Unit rent price"></label>
                                             <strong data-ng-bind="controller.rentContract.totalDays"></strong>
                                             <strong data-translate="{{ controller.rentContract.totalDays > 1 ? 'days' : 'day'}}"></strong>
@@ -123,7 +123,7 @@
                                         </div>
                                     </div>
                                     <div class="grid-column small-6 medium-6 large-6">
-                                        <div class="box" data-has-error="controller.rentContractProductsForm.quantity.$invalid">
+                                        <div class="box" data-has-error="controller.rentedProductsForm.quantity.$invalid">
                                             <label>
                                                 <span data-translate="Amount"></span>
                                                 <span class="text-danger">*</span>
@@ -137,9 +137,12 @@
                             <div class="grid-column medium-6 large-6">
                                 <div class="grid-row">
                                     <div class="grid-column small-6 medium-6 large-6">
-                                        <div class="box" data-has-error="controller.rentContractProductsForm.discount.$invalid">
-                                            <label data-translate="Discount"></label>
-                                            <input type="text" name="discount" data-ng-model="product.discount" data-type-number="8,2" />
+                                        <div class="box" data-has-error="controller.rentedProductsForm.discount.$invalid">
+                                            <label>
+                                                <span data-translate="Discount"></span> (%)
+                                            </label>
+                                            <input type="text" name="discount" data-ng-model="product.discount" data-type-number="5,2"
+                                                   data-valid-number-min="0" data-valid-number-max="100" />
                                         </div>
                                     </div>
                                     <div class="grid-column small-6 medium-6 large-6">
