--- a/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
@@ -81,7 +81,9 @@
                         <div class="grid-column small-6 medium-6 large-6">
                             <div class="grid-row">
                                 <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                    <label data-translate="Discount"></label>
+                                    <label>
+                                        <span data-translate="Discount"></span> (%)
+                                    </label>
                                     <strong data-ng-show="item.discount">
                                         <span data-ng-bind="item.discount | number:2"></span>%
                                     </strong>
