--- a/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
@@ -113,7 +113,7 @@
                             <div class="grid-column medium-6 large-6">
                                 <div class="grid-row">
                                     <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                        <div class="box" data-has-error="paymentForm.saleOrder.total.$invalid">
+                                        <div class="box" data-has-error="paymentForm.total.$invalid">
                                             <label>
                                                 <span data-translate="Value"></span>
                                                 <span class="text-danger">*</span>
