--- a/src/Dyoub.App/Views/Commercial/RentPayments/RentPaymentsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentPayments/RentPaymentsDetails.cshtml
@@ -159,7 +159,7 @@
                             <div class="grid-row">
                                 <div class="grid-column compact-6 small-6 medium-6 large-6">
                                     <div class="box">
-                                        <label data-translate="Rent fee"></label>
+                                        <label data-translate="Sale fee"></label>
                                         <strong data-ng-show="payment.feePercentage">
                                             <span data-ng-bind="payment.feePercentage | number:2"></span>%
                                         </strong>
