--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -66,5 +66,19 @@
                 </div>
             </a>
         </div>
+
+        <div class="grid-column compact-6 small-4 medium-4 large-3">
+            <a href="/partners" class="as-button card emerald">
+                <div class="card-info">
+                    <div data-translate="Records"></div>
+                    <div class="value" data-ng-bind="controller.overview.counter.partners"></div>
+                    <i class="fa fa-handshake-o"></i>
+                </div>
+                <div class="card-title">
+                    <span data-translate="Partners"></span>
+                    <i class="fa fa-angle-right"></i>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
