--- a/src/Dyoub.App/Views/Commercial/RentContracts/RentContractDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContracts/RentContractDetails.cshtml
@@ -75,12 +75,16 @@
                                 <div class="box">
                                     <label data-translate="Start date"></label>
                                     <strong data-ng-bind="controller.rentContract.startDate | moment:'shortDate'"></strong>
+                                    <strong data-translate="at"></strong>
+                                    <strong data-ng-bind="controller.rentContract.startTime"></strong>
                                 </div>
                             </div>
                             <div class="grid-column compact-6 small-6 medium-6 large-6">
                                 <div class="box">
                                     <label data-translate="End date"></label>
                                     <strong data-ng-bind="controller.rentContract.endDate | moment:'shortDate'"></strong>
+                                    <strong data-translate="at"></strong>
+                                    <strong data-ng-bind="controller.rentContract.endTime"></strong>
                                 </div>
                             </div>
                         </div>
